--- a/src/components/contactUs.style.css
+++ b/src/components/contactUs.style.css
@@ -1,16 +1,74 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: border-box;;
 }
-.Container{
-
+.contact{
+    width: 100%;
+    height: 90vh;
+    background-color:#028FBA;
 }
 .Contact-head{
+    padding-top: 2rem;
+    color: #f0f0f0;
     text-align: center;
     font-size: 2rem;
+}
+.Contact-head::after{
+    content: '';
+    background:#f0f0f0;
+    display: block;
+    height: 3px;
+    width:18rem;
+    margin: 15px auto 5px;
 }
 .contact-para{
     text-align: center;
     font-size: 1rem;
+    position: absolute;
+    top: 15%;
+    left:38%;
+    color: #f0f0f0;
 }
+.form-news{
+    position: relative;
+    top: 7%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+form input {
+	margin:10px 0;
+	padding:10px 10px;
+	width:18rem;
+	outline:none;
+	border:1px solid #f0f0f0;
+	border-radius:20px;
+	display:inline-block;
+	box-sizing:border-box;
+	transition:0.2s ease all;
+}
+label{
+    font-size: 1rem;
+}
+input{
+    width:18rem;
+    height: 2rem;
+    border: none;
+    border-radius: 0.5rem;
+}
+form button{
+    width: 8rem;
+    height: 2rem;
+    text-align: center;
+    font-size: 1.2rem;
+    cursor: pointer;
+    border: none;
+    border-radius: 0.5rem;
+}
+form button:hover{
+    opacity:0.8;
+}
+
